# ttgo-xy-cp-v1.1-freertos

./: .gitmodules  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  component.mk  ttgo-xy-cp-v1.1-freertos.c
main/demo-screens/: demo-screen-color-rotate.c  demo-screen-common.c  demo-screen-hello-world.c  demo-screen-voltage.c  demo-screen-wifi.c
main/include/: demo-screen-color-rotate.h  demo-screen-common.h  demo-screen-hello-world.h  demo-screen-voltage.h  demo-screen-wifi.h  task-button.h  task-voltage.h  task-wifi.h
main/tasks/: task-button.c  task-voltage.c  task-wifi.c
